# internal/app/app.go
@@ -8,8 +8,10 @@ import (
 	"github.com/daulet-omarov/ai-task-team-manager/internal/config"
 	"github.com/daulet-omarov/ai-task-team-manager/internal/database"
 	"github.com/daulet-omarov/ai-task-team-manager/internal/logger"
+	"github.com/daulet-omarov/ai-task-team-manager/internal/modules/attachment"
 	"github.com/daulet-omarov/ai-task-team-manager/internal/modules/auth"
 	"github.com/daulet-omarov/ai-task-team-manager/internal/modules/board"
+	"github.com/daulet-omarov/ai-task-team-manager/internal/modules/comment"
 	"github.com/daulet-omarov/ai-task-team-manager/internal/modules/employee"
 	"github.com/daulet-omarov/ai-task-team-manager/internal/modules/invite"
 	"github.com/daulet-omarov/ai-task-team-manager/internal/modules/task"
@@ -61,9 +63,11 @@ func New() *App {
 	taskHandler := task.NewModule(db)
 	inviteHandler := invite.NewModule(db)
 	uploadHandler := upload.NewHandler()
+	commentHandler := comment.NewModule(db)
+	attachmentHandler := attachment.NewModule(db)
 
 	// router
-	r := router.SetupRouter(authHandler, employeeHandler, boardHandler, taskHandler, inviteHandler, uploadHandler)
+	r := router.SetupRouter(authHandler, employeeHandler, boardHandler, taskHandler, inviteHandler, uploadHandler, commentHandler, attachmentHandler)
 
 	r.Get("/swagger/*", httpSwagger.WrapHandler)
 
